<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Social Weather</string>
    <string name="content_authority">com.example.android.socialweather</string>
    <string name="FACEBOOK_APP_ID">124609074805010</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">16d492afae21592cab554488bc579c48</string>
    <string name="ak_login_protocol_scheme">ak124609074805010</string>
    <string name="fb_login_protocol_scheme">fb124609074805010</string>
    <string name="login_app_name">Social Weather</string>
    <string name="login_phone_button_text">Login With Phone</string>
    <string name="login_email_button_text">Login With Email</string>
    <string name="login_background_content_description">Background</string>
    <string name="login_logo_content_description">Logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_logout">Log Out</string>
    <string-array name="nav_item_activity_titles">
        <item>@string/app_name</item>
        <item>Settings</item>
    </string-array>
    <string name="nav_sub_title">Other</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="nav_location_default">Unknown</string>
    <string name="nav_header_background_content_description">Header Background</string>
    <string name="nav_header_profile_content_description">Profile Picture</string>
    <string name="home_add_menu">Add Friend</string>
    <string name="home_empty_view_facebook">It looks a bit lonely here...\nWhy not share this app with your friends?</string>
    <string name="home_empty_view_account_kit">It looks a bit lonely here...\nWhy not start by adding some friends?</string>
    <string name="loading_message">Loading...</string>
    <string name="empty_message">Location is unknown</string>
    <string name="network_message">Network needs to be connected</string>
    <string name="home_ad_content_description">Google Ad</string>
    <string name="home_empty_view_content_description">No Friends To Show</string>
    <string name="home_delete_toast">Item Deleted</string>
    <string name="weather_item_lives">lives currently</string>
    <string name="weather_item_delete_content_description">Delete</string>
    <string name="weather_item_background_content_description">Location Background</string>
    <string name="weather_item_weather_icon_content_description">Weather Icon</string>
    <string name="weather_item_friend1_content_description">Friend Profile Picture</string>
    <string name="weather_item_friend2_content_description">Friend Profile Picture</string>
    <string name="weather_item_num_friend_content_description">Number of friends living in this location.</string>
    <string name="weather_item_lives_content_description">Lives Currently</string>
    <string name="pref_weather_category_title">Weather</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_lable_celsius">Celsius</string>
    <string name="pref_units_label_fahrenheit">Fahrenheit</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_celsius" translatable="false">celsius</string>
    <string name="pref_units_fahrenheit" translatable="false">fahrenheit</string>
    <string name="pref_notification_category_title">Notifications</string>
    <string name="pref_notification_update_label">Weather Update</string>
    <string name="pref_notification_update_key" translatable="false">notification_update</string>
    <string name="pref_notification_rain_snow_label">Rain/Snow</string>
    <string name="pref_notification_rain_snow_key" translatable="false">notification_rain_snow</string>
    <string name="pref_notification_extreme_label">Extreme Weather</string>
    <string name="pref_notification_extreme_key" translatable="false">notification_extreme</string>
    <string name="pref_notification_summary_on">Enabled</string>
    <string name="pref_notification_summary_off">Not Enabled</string>
    <string name="pref_update_notification_time_key">update_notification_time</string>
    <string name="pref_rain_notification_time_key">rain_notification_time</string>
    <string name="pref_snow_notification_time_key">snow_notification_time</string>
    <string name="pref_extreme_notification_time_key">extreme_notification_time</string>
    <string name="pref_login_type_key">login_type</string>
    <string name="activity_title_forecast">Weather Forecast</string>
    <string name="forecast_empty_view_text">No Weather</string>
    <string name="forecast_empty_view_content_description">No Weather</string>
    <string name="forecast_weather_icon_content_description">Weather Icon</string>
    <string name="friend_menu_title">Friends</string>
    <string name="friend_drawer_open">Open friend drawer</string>
    <string name="friend_drawer_close">Close friend drawer</string>
    <string name="friend_profile_content_description">Profile Picture</string>
    <string name="activity_title_details">Details</string>
    <string name="details_pressure_label">Pressure</string>
    <string name="details_humidity_label">Humidity</string>
    <string name="details_wind_label">Wind Speed</string>
    <string name="details_weather_icon_content_description">Weather Icon</string>
    <string name="account_view_title">Friend Info</string>
    <string name="account_edit_title">Edit Friend</string>
    <string name="account_add_title">Add Friend</string>
    <string name="account_name_label">Name</string>
    <string name="account_name_hint">Name</string>
    <string name="account_location_label">Location</string>
    <string name="account_location_hint">Location</string>
    <string name="account_save_title">Save</string>
    <string name="account_delete_title">Delete</string>
    <string name="account_fill_fields_toast">Please fill all required fields</string>
    <string name="account_profile_content_description">Profile Picture</string>
    <string name="discard_title">Discard Changes</string>
    <string name="discard_message">Are you sure you want to discard these changes?</string>
    <string name="add_title">Add Friend Info</string>
    <string name="add_message">Are you sure you want to add this friend info?</string>
    <string name="add_toast">Added Friend</string>
    <string name="edit_title">Edit Friend Info</string>
    <string name="edit_message">Are you sure you want to edit this friend info?</string>
    <string name="edit_toast">Edit Successful</string>
    <string name="delete_title">Delete Friend Info</string>
    <string name="delete_message">Are you sure you want to delete this friend info?</string>
    <string name="delete_toast">Friend Deleted</string>
    <string name="account_profile_key" translatable="false">account_profile</string>
    <string name="account_name_key" translatable="false">account_name</string>
    <string name="account_location_key" translatable="false">account_location</string>
    <string name="account_position_key" translatable="false">account_position</string>
    <string name="version_text">Version 1.3</string>
    <string name="email_text">Contact us through Email</string>
    <string name="facebook_text">Like us on Facebook</string>
    <string name="github_text">Follow us on Github</string>
    <string name="playstore_text">Rate us on Play Store</string>
    <string name="privacy_policy_facebook_permissions">Facebook Permissions We Ask</string>
    <string name="public_profile_permission">Public Profile</string>
    <string name="public_profile_subtext">Provides Access to a User\'s Basic Information</string>
    <string name="friends_permission">User Friends</string>
    <string name="friends_subtext">Provides Access to User\'s List of Friends that Use this App</string>
    <string name="email_permission">Email</string>
    <string name="email_subtext">Provides Access to User\'s Primary Email Address</string>
    <string name="location_permission">Location</string>
    <string name="location_subtext">Provides Access to User\'s Current City Listed in Timeline</string>
    <string name="privacy_policy_others">Others</string>
    <string name="google_analytics">Google Analytics</string>
    <string name="google_analytics_subtext">Personal Data: Cookies and Usage Data</string>
    <string name="google_admob">Google Admob</string>
    <string name="google_admob_subtext">Personal Data: Cookies and Usage Data</string>
    <string name="privacy_policy_more_info">More Info</string>
    <string name="privacy_policy_link">Privacy Policy Link</string>
    <string name="privacy_policy_link_subtext" translatable="false">https://www.iubenda.com/privacy-policy/8193003</string>
    <string name="widget_empty_text">No Weather Available</string>
    <string name="widget_profile_content_description">Profile Picture</string>
    <string name="widget_weather_icon_content_description">Weather Icon</string>
    <string name="widget_empty_content_description">No Weather To Show</string>
    <string name="admob_app_id">ca-app-pub-4336412680099916~5292675931</string>
    <string name="admob_banner_id">ca-app-pub-4336412680099916/3237358236</string>
    <string name="delimiter" translatable="false">%%%</string>
    <string name="is_facebook_key">is_facebook</string>
    <string name="is_invalid_key">is_invalid</string>
    <string name="location_photo_empty" translatable="false">location_photo_empty</string>
    <string name="picture_empty" translatable="false">picture_empty</string>
    <string name="location_empty" translatable="false">location_empty</string>
    <string name="location_default">Unknown</string>
    <string name="description_empty" translatable="false">description_empty</string>
    <string name="description_default">No Weather</string>
    <string name="forecast_times_empty" translatable="false">forecast_times_empty</string>
    <string name="forecast_ids_empty" translatable="false">forecast_ids_empty</string>
    <string name="forecast_descriptions_empty" translatable="false">forecast_descriptions_empty</string>
    <string name="forecast_min_temps_empty" translatable="false">forecast_min_temps_empty</string>
    <string name="forecast_max_temps_empty" translatable="false">forecast_max_temps_empty</string>
    <string name="forecast_pressures_empty" translatable="false">forecast_pressures_empty</string>
    <string name="forecast_humidities_empty" translatable="false">forecast_humidities_empty</string>
    <string name="forecast_wind_speeds_empty" translatable="false">forecast_wind_speeds_empty</string>
    <string name="forecast_position_key" translatable="false">forecast_position</string>
    <string name="friends_permission_message">Social Weather requires permission to access your friend list.</string>
    <string name="location_permission_message">Your friends won\'t be able to see your weather info.</string>
    <string name="notification_update_text">New Weather Available!</string>
    <string name="notification_comma">,\u0020</string>
    <string name="notification_and">\u0020and\u0020</string>
    <string name="notification_and_comma">\u0020,and\u0020</string>
    <string name="notification_rain_text_single">\u0020is experiencing rain.</string>
    <string name="notification_rain_text_two">\u0020are experiencing rain.</string>
    <string name="notification_rain_text_three">\u0020others are experiencing rain.</string>
    <string name="notification_snow_text_single">\u0020is experiencing snow.</string>
    <string name="notification_snow_text_two">\u0020are experiencing snow.</string>
</resources>