<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.socialweather.LoginActivity">

    <ImageView
        android:id="@+id/login_background_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/login_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_app_name"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:drawableTop="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/login_phone_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/login_phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phone_button_text"
        app:layout_constraintBottom_toTopOf="@+id/login_email_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/login_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email_button_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
